--- a/Lectures/04 Data Types/21 Set Operations.ipynb
+++ b/Lectures/04 Data Types/21 Set Operations.ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
        "{1, 2, 3, 4, 5}"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
        "{1, 2, 3, 4, 5}"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,6 +158,26 @@
    "source": [
     "# Using the .union() method\n",
     "set_a.union(set_b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2, 3, 7, 8, 9}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set_a.union([7,8,9]) #we can pass iterables to it"
    ]
   },
   {
@@ -178,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +207,7 @@
        "{3}"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +228,7 @@
        "{3}"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +265,7 @@
        "{1, 2}"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +286,7 @@
        "{1, 2}"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +331,7 @@
        "{1, 2, 4, 5}"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +352,7 @@
        "{1, 2, 4, 5}"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +400,7 @@
        "True"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +421,7 @@
        "True"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +442,7 @@
        "True"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +515,7 @@
        "{1, 2, 3, 4, 5}"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +535,7 @@
        "{1, 2, 3, 4, 5, 6, 7}"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +569,7 @@
        "{3}"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +589,7 @@
        "{3}"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +623,7 @@
        "{1, 2}"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +643,7 @@
        "{1, 2}"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +677,7 @@
        "{1, 2, 4, 5}"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -668,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +697,7 @@
        "{1, 2, 4, 5}"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -780,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -809,7 +829,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py310",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -823,7 +843,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
